--- a/3a_Brenda/src/br/edu/ifro/Aluno.fxml
+++ b/3a_Brenda/src/br/edu/ifro/Aluno.fxml
@@ -7,12 +7,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="br.edu.ifro.AlunoController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.AlunoController">
    <children>
       <Label layoutX="72.0" layoutY="79.0" prefHeight="25.0" prefWidth="51.0" text="Nome" />
-      <Button layoutX="72.0" layoutY="154.0" mnemonicParsing="false" onAction="#fechar" text="Fechar" />
-      <Button layoutX="173.0" layoutY="154.0" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
+      <Button fx:id="btnFechar" layoutX="72.0" layoutY="154.0" mnemonicParsing="false" onAction="#fechar" text="Fechar" />
+      <Button fx:id="btnSalvar" layoutX="173.0" layoutY="154.0" mnemonicParsing="false" onAction="#salvar" text="Salvar" />
       <TextField fx:id="txtNome" layoutX="72.0" layoutY="104.0" />
    </children>
 </AnchorPane>
